# data-extracter

./: README.md
backend/: .gitignore  main.py  ocr_output.csv  output_tabela.csv  pyproject.toml
backend/config/: openai_setup.py
backend/routes/: data.py  documents.py  experimentos.py  tabelas.py
backend/services/: imagem_utils.py  openai_setup.py  pdf_utils.py  text_correction.py
frontend/data-extracter/: package-lock.json  package.json
frontend/data-extracter/src/app/: globals.css  layout.tsx  page.tsx
frontend/data-extracter/src/components/: ErrorModal.tsx  Header.tsx
